2008-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Starting postmaster again, but was still killing postgres
2008-10-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Went back to invoking postmaster for compatibility with older versions
2008-10-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx:
  - Removed warning; pipeline is stable now
 tools/pqxx-fulltest:
  - Sod testing against the 7.3 backend; too complicated for now
2008-10-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - More tweaks to backend startup
2008-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Allow some time for database to be created
  - Run postgres instead of postmaster
2008-10-16  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 include/pqxx/largeobject.hxx, test/unit/test_prepared_statement.cxx:
  - Fixed last g++ 4.3 warnings on 64-bit platforms.
2008-10-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
  - Fixed more g++ 4.3 warnings, thanks Eugene V. Lyubimkin
2008-10-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx, test/test009.cxx,
 test/test028.cxx:
  - Fixed g++ 4.3 warnings, thanks Eugene V. Lyubimkin
2008-10-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README-UPGRADE:
  - Updated for 3.0.
 src/util.cxx:
  - Preserve slightly more precision in floats, thanks Kirit Saelensminde
 test/test005.cxx:
  - Removed use of "IF EXISTS" in DROP TABLE (older backends don't have it)
 test/test_main.hxx:
  - Test runner no longer considers "unsupported feature" a test failure
 test/unit/test_sql_cursor.cxx:
  - Fixed test failure on old backends that need test workaround
2008-10-11  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 debian/libpqxx*, debian/rules, debian/compat, debian/control,
 debian/watch:
  - Significantly reworked to make ready for upcoming 3.0.0 release.
 debian/Makefile.am:
  - Corrected to let 'make deb' working.